--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link href="/src/assets/icons/css/fontawesome.css" rel="stylesheet" />
+    <link href="/src/assets/icons/css/brands.css" rel="stylesheet" />
+    <link href="/src/assets/icons/css/solid.css" rel="stylesheet" />
+    <title>Color Bingo</title>
   </head>
   <body>
     <div id="root"></div>
